<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordWorkoutPortFragment"
    android:orientation="vertical"
    android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alphaTitle"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:background="@color/alphaPrussianBlue"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1"
        android:background="@color/alphaGray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/alphaRecordWorkout"
            android:id="@+id/textView2"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="32dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:id="@+id/profileImage"
            android:src="@mipmap/ic_action_account_box"
            android:layout_weight="0.58" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:stretchColumns="0,1"
        android:showDividers="middle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:showDividers="middle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alphaDistance"
                android:id="@+id/textView3"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alphaDuration"
                android:id="@+id/textView4"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showDividers="middle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="0.00"
                android:id="@+id/distanceTV"
                android:textStyle="bold"
                android:textSize="50dp"
                android:textAlignment="center" />

            <Chronometer
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chronometer"
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="0:00:00" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alphaKM"
                android:id="@+id/textView7"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alphaMin"
                android:id="@+id/textView8"
                android:layout_column="1"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>

    <com.google.android.gms.maps.MapView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/map"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <Button
        android:id="@+id/actionBtn"

        android:text="@string/alphaStartWorkout"
        android:textColor="#FFFFFF"
        android:textSize="23sp"

        android:layout_width="202dp"
        android:layout_height="44dp"
        android:background="@drawable/buttonshape"
        android:layout_margin="4dp"
        android:layout_gravity="bottom|center_horizontal" />
</LinearLayout>
