<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordWorkoutPortFragment"
    android:orientation="vertical"
    android:id="@+id/layout">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alphaTitle"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:background="@color/alphaPrussianBlue"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:id="@+id/imageView"
            android:src="@mipmap/ic_action_account_box"
            android:layout_weight="0.58"
            android:padding="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Eiko Mitani"
            android:id="@+id/nameTV"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="35dp"
            android:editable="false" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:stretchColumns="0,1"
        android:showDividers="middle">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showDividers="middle"
            android:padding="10dp">

            <LinearLayout android:orientation="horizontal"
                android:gravity="center_vertical|center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/alphaGender"
                    android:id="@+id/textView12"
                    android:textColor="@color/alphaPrussianBlue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Female"
                    android:id="@+id/genderTV"
                    android:background="@color/alphaGray"
                    android:textColor="@color/alphaPrussianBlue"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp" />
            </LinearLayout>

            <LinearLayout android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/alphaWeight"
                    android:id="@+id/textView14"
                    android:textColor="@color/alphaPrussianBlue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="120 lbs"
                    android:id="@+id/weightTV"
                    android:background="@color/alphaGray"
                    android:textColor="@color/alphaPrussianBlue"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/alphaSkyBlue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alphaAveWeek"
                android:id="@+id/textView7"
                android:padding="10dp"
                android:textColor="@color/alphaWhite" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alphaDistanceLower"
                android:id="@+id/textView25"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="2.4 km"
                android:id="@+id/weekDistance"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alphaTime"
                android:id="@+id/textView27"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="1 hr 34 min 05 sec"
                android:id="@+id/weekTime"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alphaWorkouts"
                android:id="@+id/textView29"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="2 times"
                android:id="@+id/weekCounts"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alphaCalBurned"
                android:id="@+id/textView31"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="1,000 Cal"
                android:id="@+id/weekCalories"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/alphaSkyBlue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alphaAllTime"
                android:id="@+id/textView33"
                android:padding="10dp"
                android:textColor="@color/alphaWhite" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alphaDistanceLower"
                android:id="@+id/textView34"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="2.4 km"
                android:id="@+id/allDistance"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alphaTime"
                android:id="@+id/textView36"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="1 hr 34 min 05 sec"
                android:id="@+id/allTime"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alphaWorkouts"
                android:id="@+id/textView20"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="2 times"
                android:id="@+id/allWorkout"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alphaCalBurned"
                android:id="@+id/textView22"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="1,000 Cal"
                android:id="@+id/allCalories"
                android:padding="5dp"
                android:textColor="@color/alphaIvoryBlack" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"></LinearLayout>


</LinearLayout>
